# sopds-go

./: .dockerignore  .gitignore  .golangci.yml  .goreleaser.yaml  CLAUDE.md  Dockerfile  NOTICE.md  PROGRESS.md  README.md  Taskfile.docker.example.yml  Taskfile.yml  config.yaml.example  config_test.yaml  docker-compose.example.yml  flake.nix  go.mod  go.sum  init.sql  test_baseline.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
cmd/sopds/: fb2extract.go  main.go  reviewglue.go  tts.go  tts_worker.go
cmd/sopds-tts/: main.go
cmd/zipdupes/: main.go
docs/: tts-quality-research.md
docs/decisions/: 001-f5-tts-onnx-integration.md  002-piper-high-ru-uk-training.md  003-apple-silicon-piper-stays-cpu.md  004-ruaccent-rust-port.md  005-dual-voice-footnotes.md
f5-bridge/: FUTURE.md  README.md  corrections.json  dict_flags.py  f5_daemon.py  fb2-to-f5.sh  fb2_extract.py  flake.nix  merge_ellipsis.py  rechunk.py  ruaccent_batch.py  split_notes.py
f5-bridge/docker/: Dockerfile  entrypoint.sh
f5-bridge/reviewer/: go.mod  index.html  main.go
fetch/: README.md  ak1.torrent  akunin.txt  download-all.sh  fetch-torrents.sh  get-page.curl  get-torrent.curl  ids2.txt  list-torrents.sh  out.txt  out2.txt  out_p3.txt  out_p4.txt  out_p5.txt  out_p6.txt  out_p7.txt
internal/config/: config.go  config_test.go
internal/converter/: converter.go  converter_test.go  reader.go  reader_test.go
internal/database/: models.go  models_test.go  postgres.go  queries.go
internal/database/migrations/: 003_scanner_perf.sql
internal/domain/author/: author.go  author_test.go
internal/domain/book/: book.go  (+2 more)
internal/i18n/: i18n.go  i18n_test.go
internal/narrate/: extract.go  extract_test.go  headings.go  narrate.go  narrate_test.go
internal/opds/: feed.go  feed_test.go
internal/scanner/: audiobookgrouper.go  audiobookgrouper_test.go  audioparser.go  audioparser_test.go  duration.go  duration_test.go  fb2parser.go  fb2parser_test.go  inxparser.go  inxparser_test.go  scanner.go
internal/server/: auth.go  auth_templates.go  email.go  favicon.go  handlers.go  helpers.go  server.go  web.go
internal/tts/: cache.go  daemon.go  daemon_test.go  extractor.go  generator.go  piper.go  queue.go  tts_test.go
sopds-tts-rs/: Cargo.toml  fb2-to-wav.sh  flake.nix  run-gpu.sh
sopds-tts-rs/src/: f5.rs  main.rs
sopds-tts-rs/src/ruaccent/: char_tok.rs  dicts.rs  mod.rs  models.rs  ner.rs  preprocess.rs  razdel.rs  tok_bert.rs
zipdupes-rs/: Cargo.toml
zipdupes-rs/src/: main.rs
(+51 files in other folders)
